2012-11-10  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/semaphore.h-data [XPG3 || XPG4]: Disable whole
	file.
	[UNIX98] (sem_timedwait): Do not expect.
	* conform/data/sys/socket.h-data [XPG3]: Disable whole file.
	[XPG4 || UNIX98] (sockatmark): Do not expect.
	* conform/data/time.h-data [XPG3 || XPG4 || UNIX98]
	(clock_getcpuclockid): Do not expect.
	[XPG3 || XPG4 || UNIX98] (clock_nanosleep): Do not expect.
	* conform/data/unistd.h-data [XPG3 || XPG4 || UNIX98] (setegid):
	Do not expect.
	[XPG3 || XPG4 || UNIX98] (seteuid): Likewise.
	* conform/data/wchar.h-data [UNIX98] (vfwscanf): Do not expect.
	[UNIX98] (vwscanf): Likewise.
	[UNIX98] (vswscanf): Likewise.

2012-11-09  Joseph Myers  <joseph@codesourcery.com>

	* timezone/version.h: Remove file.
	* timezone/README: Do not refer to version.h.
	* timezone/Makefile ($(objpfx)zic.o): New dependency on
	$(objpfx)version.h.
	($(objpfx)zdump.o): Likewise.
	($(objpfx)version.h): New target.

	* timezone/tzselect.ksh: Change to verbatim copy from tzcode
	2012i.
	* timezone/README: Don't mention modification to tzselect.ksh.
	* timezone/Makefile ($(objpfx)tzselect): Update substitutions to
	work on unmodified tzselect.ksh.  Substitute version numbers in
	tzselect.ksh.

	* Makefile (format-me): Remove.
	(INSTALL): Adjust indentation.  Use commands directly instead of
	using $(format-me).

	* aclocal.m4 (ACX_PKGVERSION): New macro.
	(ACX_BUGURL): Likewise.
	* configure.in: Use ACX_PKGVERSION and ACX_BUGURL.
	(PKGVERSION): New AC_DEFINE_UNQUOTED.
	(REPORT_BUGS_TO): Likewise.
	* configure: Regenerated.
	* config.h.in (PKGVERSION): New macro.
	(REPORT_BUGS_TO): Likewise.
	* config.make.in (PKGVERSION): New variable.
	(PKGVERSION_TEXI): Likewise.
	(REPORT_BUGS_TO): Likewise.
	(REPORT_BUGS_TEXI): Likewise.
	* Makefile (format-me): Use -I$(common-objpfx)manual.
	(INSTALL): Depend on $(common-objpfx)manual/pkgvers.texi.
	($(common-objpfx)manual/%): New target.
	(manual/%): Remove target.